--- a/src/views/admin/home.pug
+++ b/src/views/admin/home.pug
@@ -1,5 +1,8 @@
 extends shared.pug
 
+block breadcrumbItem
+    li.breadcrumb-item.active
+        span Home
 block content
 
     h1.text-center.text-primary.font-weight-bold.display-2.my-5 Welcome admin
