--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -29,7 +29,7 @@ html(lang="es")
                                     a(href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" id="dropdownAbout") Acerca de
                                     .dropdown-menu(id="dropdownAbout")
                                         a(href="/about" class="dropdown-item") Nosotros
-                                        a(hreef="/about" class="dropdown-item") Equipo
+                                        a(href="/about" class="dropdown-item") Equipo
                                         a(href="/contact" class="dropdown-item") Contacto
                             li.nav-item
                                 .dropdown
@@ -40,7 +40,7 @@ html(lang="es")
                             li.nav-item
                                 a.nav-link(href="/business") Empresas
                             li.nav-item
-                                a.nav-link(href="/news") Noticias
+                                a.nav-link(href="/news?category=all&page=1") Noticias
         main
             block content
         footer.bg-light
