--- a/src/views/admin/shared.pug
+++ b/src/views/admin/shared.pug
@@ -13,7 +13,7 @@ html(lang="es")
         block links
         //- custom css
         link(rel="stylesheet", href="/public/css/style.css")
-    body.m-0.m-lg-5.bg-light
+    body.m-0.m-lg-5
 
         //- navigation
         header
@@ -26,21 +26,22 @@ html(lang="es")
                     #nav-menu.collapse.navbar-collapse
                         ul.navbar-nav.ml-auto
                             li.nav-item
-                                a(href="/admin/categories" class="nav-link") Categorias
+                                a(href="/admin/business" class="nav-link") Empresas
                             li.nav-item
-                                a(href="/admin/categories" class="nav-link") Empresas
+                                a(href="/admin/services" class="nav-link") Servicios
                             li.nav-item
-                                a(href="/admin/categories" class="nav-link") Servicios
+                                a(href="/admin/employees" class="nav-link") Empleados
                             li.nav-item
-                                a(href="/admin/categories" class="nav-link") Empleados
+                                a(href="/admin/alliances" class="nav-link") Alianzas
                             li.nav-item
-                                a(href="/admin/categories" class="nav-link") Alianzas
-                            li.nav-item
-                                a(href="/admin/categories" class="nav-link") Noticias
+                                a(href="/admin/news" class="nav-link") Noticias
                             li.nav-item
                                 a(href="/admin/logout" class="btn btn-secondary") Logout
             main
-                block content      
+                nav.container
+                    ol.breadcrumb.bg-white
+                        block breadcrumbItem
+                block content    
         //- jquery
         script(src="https://code.jquery.com/jquery-3.5.1.min.js")
         //- bootstrap
