--- a/src/views/training.pug
+++ b/src/views/training.pug
@@ -8,8 +8,8 @@ block content
         .container
             .row.align-items-center.flex-column-reverse.flex-lg-row
                 .col-sm-12.col-lg-6.text-left
-                    h4.text-white ¿Quiénes somos?
-                    h2.display-3.text-primary.font-weight-bold Acerca de nosotros
+                    h4.text-white Implusamos tu idea
+                    h2.display-3.text-primary.font-weight-bold Asesoría
                 .col-sm-12.col-lg-6
                     img(src="/public/img/training.png", alt="" class="img-fluid")
     //- section 2 -
